.tempCodeRunnerFile.txt

/Users/Reynaldo/Desktop/test-Rey1213/ex.js:1
consle.log("Hello");
^

ReferenceError: consle is not defined
    at Object.<anonymous> (/Users/Reynaldo/Desktop/test-Rey1213/ex.js:1:1)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Function.Module.runMain (internal/modules/cjs/loader.js:999:10)
    at internal/main/run_main_module.js:17:11
Sun  2 Feb 2020 02:28:28 CST
Example.java:21: error: cannot find symbol
          System.out.pritln("Neither all are equal or different");
                    ^
  symbol:   method pritln(String)
  location: variable out of type PrintStream
1 error
Sun  2 Feb 2020 02:28:49 CST
Input first number: 